cmake_minimum_required(VERSION 3.14.5)

project(Cargo-bot)

#add_subdirectory(sfxr120)
set(LUA_INC $ENV{HOME}/usr/local/include)
set(LUA_LIB $ENV{HOME}/usr/local/lib)
add_library(phys STATIC phys.cpp)

target_include_directories(phys PUBLIC ${LUA_INC})
target_link_directories(phys PUBLIC ${LUA_LIB})
target_include_directories(phys PRIVATE /sdcard/_ws/box2d_231/box2d/Box2D)
target_link_directories(phys PUBLIC /sdcard/_ws/box2d_231/box2d/Box2D/c.build/Box2D)
#target_link_options(phys PUBLIC -pie -Wl,--no-undefined)
#target_link_libraries(phys PRIVATE lua_static box2d)


add_library(cargo SHARED cCode.c font.cpp sfxr.cpp loadpng.cpp pngtest.cpp b64/cdecode.c)
target_include_directories(cargo PRIVATE ${LUA_INC})
target_link_directories(cargo PUBLIC ${LUA_LIB})
target_link_options(cargo PUBLIC -Wl,--no-undefined)
target_link_libraries(cargo PUBLIC native_app_glue EGL GLESv1_CM log android png z phys lua_static box2d openal OpenSLES)
if(CIDE)
set(CMAKE_SHARED_LIBRARY_PREFIX)
set(CMAKE_SHARED_LIBRARY_SUFFIX .out)
set_target_properties(cargo PROPERTIES OUTPUT_NAME a)
else()
set_target_properties(cargo PROPERTIES OUTPUT_NAME box)
endif()


add_executable(cargos test.cpp )
target_link_options(cargos PUBLIC -pie)

target_include_directories(cargos PUBLIC ${LUA_INC})
target_link_directories(cargos PUBLIC ${LUA_LIB})

target_link_libraries(cargos PUBLIC log lua)
if(CIDE)
set_target_properties(cargos PROPERTIES OUTPUT_NAME test.out)
install(TARGETS cargo DESTINATION $ENV{TMPDIR})
else()
set_target_properties(cargos PROPERTIES OUTPUT_NAME a.out)
set(LIB true)
if(LIB)
install(TARGETS cargo DESTINATION ${PROJECT_NAME})
else()
install(TARGETS cargos DESTINATION ${PROJECT_NAME})
endif()
endif()